--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 <html>
 <body>
-Hello world!
+For now, here are some useful things...
+  
+AVG Rescue Disk - https://share.avg.com/arl/
+NiNite - https://ninite.com/
+Display Driver Uninstaller - https://www.wagnardsoft.com/
+SysInternals - https://docs.microsoft.com/en-us/sysinternals/downloads/sysinternals-suite
+Htop - https://github.com/hishamhm/htop
+CrystalDiskInfo - https://crystalmark.info/en/software/crystaldiskinfo/
+RevoUninstaller - https://www.revouninstaller.com/revo_uninstaller_free_download.html
+TestDisk - https://www.cgsecurity.org/wiki/TestDisk_Download
+PuTTY - https://www.putty.org/
+Easy2boot - http://www.easy2boot.com/
+CloneZilla - https://clonezilla.org/downloads.php
+VirusTotal - https://www.virustotal.com/#/home/upload
+ZenMap - https://nmap.org/zenmap/
+WSUS Offline Update - http://www.wsusoffline.net/docs/
+HP Fax Test Service - https://support.hp.com/us-en/document/c00259105
+Subnetting Practice - https://subnettingpractice.com/
 </body>
 </html>
