--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <html>
 <body>
 For now, here are some useful things...
-  
-AVG Rescue Disk - https://share.avg.com/arl/
-NiNite - https://ninite.com/
-Display Driver Uninstaller - https://www.wagnardsoft.com/
-SysInternals - https://docs.microsoft.com/en-us/sysinternals/downloads/sysinternals-suite
-Htop - https://github.com/hishamhm/htop
-CrystalDiskInfo - https://crystalmark.info/en/software/crystaldiskinfo/
-RevoUninstaller - https://www.revouninstaller.com/revo_uninstaller_free_download.html
-TestDisk - https://www.cgsecurity.org/wiki/TestDisk_Download
-PuTTY - https://www.putty.org/
-Easy2boot - http://www.easy2boot.com/
-CloneZilla - https://clonezilla.org/downloads.php
-VirusTotal - https://www.virustotal.com/#/home/upload
-ZenMap - https://nmap.org/zenmap/
-WSUS Offline Update - http://www.wsusoffline.net/docs/
-HP Fax Test Service - https://support.hp.com/us-en/document/c00259105
-Subnetting Practice - https://subnettingpractice.com/
+  <P>
+<br>AVG Rescue Disk - https://share.avg.com/arl/
+<br>NiNite - https://ninite.com/
+<br>Display Driver Uninstaller - https://www.wagnardsoft.com/
+<br>SysInternals - https://docs.microsoft.com/en-us/sysinternals/downloads/sysinternals-suite
+<br>Htop - https://github.com/hishamhm/htop
+<br>CrystalDiskInfo - https://crystalmark.info/en/software/crystaldiskinfo/
+<br>RevoUninstaller - https://www.revouninstaller.com/revo_uninstaller_free_download.html
+<br>TestDisk - https://www.cgsecurity.org/wiki/TestDisk_Download
+<br>PuTTY - https://www.putty.org/
+<br>Easy2boot - http://www.easy2boot.com/
+<br>CloneZilla - https://clonezilla.org/downloads.php
+<br>VirusTotal - https://www.virustotal.com/#/home/upload
+<br>ZenMap - https://nmap.org/zenmap/
+<br>WSUS Offline Update - http://www.wsusoffline.net/docs/
+<br>HP Fax Test Service - https://support.hp.com/us-en/document/c00259105
+<br>Subnetting Practice - https://subnettingpractice.com/
 </body>
 </html>
