--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-  <a href="https://www.garenkessel.com">Hello world!</a>
+  <title>Hello world!</title>
+  <h1><a href="https://www.garenkessel.com">Hello world!</a></h1>
 </body>
 </html>
