--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<body>
+<body bgcolor="gray">
   <title>Hello world!</title>
-  <h1><a href="https://www.garenkessel.com">Hello world!</a></h1>
+  <h1 style="color: green;"><a href="https://www.garenkessel.com">Hello world!</a></h1>
 </body>
 </html>
